Add homepage in package.json

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://seder111.github.io/avocados",
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
