--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "pretty-quick": "^3.1.0",
     "snowpack": "^3.0.11",
     "tailwindcss": "^2.0.2"
+  },
+  "dependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
