--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
+    "deploy": "npm run build && npx gh-pages -d ./build",
     "format": "prettier --write \"src/**/*.js\"",
     "lint": "prettier --check \"src/**/*.js\"",
     "pre-commit": "pretty-quick --staged",
